--- a/api_check.xaml
+++ b/api_check.xaml
@@ -129,7 +129,7 @@
       <AssemblyReference>UiPath.CV.Activities</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Flowchart DisplayName="api_check_flowchart" sap:VirtualizedContainerService.HintSize="888,1515" sap2010:WorkflowViewState.IdRef="Flowchart_1">
+  <Flowchart DisplayName="api_check_flowchart" sap:VirtualizedContainerService.HintSize="887.9999999999999,1515" sap2010:WorkflowViewState.IdRef="Flowchart_1">
     <Flowchart.Variables>
       <Variable x:TypeArguments="njl:JObject" Name="JsonArray" />
       <Variable x:TypeArguments="x:String" Name="instance_code" />
@@ -430,19 +430,19 @@
                                           <av:PointCollection x:Key="ConnectorLocation">300,646 300,687.5</av:PointCollection>
                                         </scg:Dictionary>
                                       </sap:WorkflowViewStateService.ViewState>
-                                      <ui:ForEach x:TypeArguments="sd:DataRow" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="200,53" sap2010:WorkflowViewState.IdRef="ForEach`1_4" MaxIterations="5">
+                                      <ui:ForEach x:TypeArguments="sd:DataRow" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="730,2279" sap2010:WorkflowViewState.IdRef="ForEach`1_4" MaxIterations="5">
                                         <ui:ForEach.Body>
                                           <ActivityAction x:TypeArguments="sd:DataRow">
                                             <ActivityAction.Argument>
                                               <DelegateInArgument x:TypeArguments="sd:DataRow" Name="currentDataRow" />
                                             </ActivityAction.Argument>
-                                            <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="700,2100" sap2010:WorkflowViewState.IdRef="Sequence_7">
+                                            <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="696,2091" sap2010:WorkflowViewState.IdRef="Sequence_7">
                                               <sap:WorkflowViewStateService.ViewState>
                                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                 </scg:Dictionary>
                                               </sap:WorkflowViewStateService.ViewState>
-                                              <Assign sap:VirtualizedContainerService.HintSize="658,83" sap2010:WorkflowViewState.IdRef="Assign_3">
+                                              <Assign sap:VirtualizedContainerService.HintSize="654,83" sap2010:WorkflowViewState.IdRef="Assign_3">
                                                 <Assign.To>
                                                   <OutArgument x:TypeArguments="x:String">
                                                     <CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_12">api_data_code</CSharpReference>
@@ -454,7 +454,7 @@
                                                   </InArgument>
                                                 </Assign.Value>
                                               </Assign>
-                                              <Assign sap:VirtualizedContainerService.HintSize="658,83" sap2010:WorkflowViewState.IdRef="Assign_4">
+                                              <Assign sap:VirtualizedContainerService.HintSize="654,83" sap2010:WorkflowViewState.IdRef="Assign_4">
                                                 <Assign.To>
                                                   <OutArgument x:TypeArguments="x:String">
                                                     <CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_13">api_data_url</CSharpReference>
@@ -466,32 +466,32 @@
                                                   </InArgument>
                                                 </Assign.Value>
                                               </Assign>
-                                              <uix:NApplicationCard AttachMode="SingleWindow" CloseMode="Always" DisplayName="Use Browser Chrome: New Tab" sap:VirtualizedContainerService.HintSize="658,1766" sap2010:WorkflowViewState.IdRef="NApplicationCard_2" InteractionMode="DebuggerApi" OpenMode="Never" ScopeGuid="8772ee85-050e-4cd1-964a-cb970065a2d2" Version="V2">
+                                              <uix:NApplicationCard AttachMode="SingleWindow" CloseMode="Always" DisplayName="Use Browser Chrome: New Tab" sap:VirtualizedContainerService.HintSize="654,1757" sap2010:WorkflowViewState.IdRef="NApplicationCard_2" InteractionMode="DebuggerApi" OpenMode="Never" ScopeGuid="8772ee85-050e-4cd1-964a-cb970065a2d2" Version="V2">
                                                 <uix:NApplicationCard.Body>
                                                   <ActivityAction x:TypeArguments="x:Object">
                                                     <ActivityAction.Argument>
                                                       <DelegateInArgument x:TypeArguments="x:Object" Name="WSSessionData" />
                                                     </ActivityAction.Argument>
-                                                    <Sequence sap:VirtualizedContainerService.HintSize="624,1548" sap2010:WorkflowViewState.IdRef="Sequence_15">
+                                                    <Sequence sap:VirtualizedContainerService.HintSize="620,1539" sap2010:WorkflowViewState.IdRef="Sequence_15">
                                                       <sap:WorkflowViewStateService.ViewState>
                                                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                         </scg:Dictionary>
                                                       </sap:WorkflowViewStateService.ViewState>
-                                                      <uix:NGoToUrl DisplayName="Go To URL" sap:VirtualizedContainerService.HintSize="562,83" sap2010:WorkflowViewState.IdRef="NGoToUrl_2" Version="V3">
+                                                      <uix:NGoToUrl DisplayName="Go To URL" sap:VirtualizedContainerService.HintSize="558,83" sap2010:WorkflowViewState.IdRef="NGoToUrl_2" Version="V3">
                                                         <uix:NGoToUrl.Url>
                                                           <InArgument x:TypeArguments="x:String">
                                                             <CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_115">api_data_url</CSharpValue>
                                                           </InArgument>
                                                         </uix:NGoToUrl.Url>
                                                       </uix:NGoToUrl>
-                                                      <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="562,1310" sap2010:WorkflowViewState.IdRef="Sequence_14">
+                                                      <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="558,1301" sap2010:WorkflowViewState.IdRef="Sequence_14">
                                                         <sap:WorkflowViewStateService.ViewState>
                                                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                           </scg:Dictionary>
                                                         </sap:WorkflowViewStateService.ViewState>
-                                                        <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="500,1195" sap2010:WorkflowViewState.IdRef="Sequence_11">
+                                                        <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="496,1186" sap2010:WorkflowViewState.IdRef="Sequence_11">
                                                           <Sequence.Variables>
                                                             <Variable x:TypeArguments="x:String" Name="text_api" />
                                                           </Sequence.Variables>
@@ -500,7 +500,7 @@
                                                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                             </scg:Dictionary>
                                                           </sap:WorkflowViewStateService.ViewState>
-                                                          <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="438,391" sap2010:WorkflowViewState.IdRef="TryCatch_3">
+                                                          <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="434,382" sap2010:WorkflowViewState.IdRef="TryCatch_3">
                                                             <TryCatch.Try>
                                                               <uix:NGetText DisplayName="Get Text 'Service is up &amp; running'" sap:VirtualizedContainerService.HintSize="334,158" sap2010:WorkflowViewState.IdRef="NGetText_2" ScopeIdentifier="8772ee85-050e-4cd1-964a-cb970065a2d2" Version="V3">
                                                                 <uix:NGetText.Target>
@@ -514,10 +514,10 @@
                                                               </uix:NGetText>
                                                             </TryCatch.Try>
                                                             <TryCatch.Catches>
-                                                              <Catch x:TypeArguments="s:Exception" sap:VirtualizedContainerService.HintSize="404,22" sap2010:WorkflowViewState.IdRef="Catch`1_5">
+                                                              <Catch x:TypeArguments="s:Exception" sap:VirtualizedContainerService.HintSize="400,215" sap2010:WorkflowViewState.IdRef="Catch`1_5">
                                                                 <sap:WorkflowViewStateService.ViewState>
                                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                                                    <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                                                                    <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                                     <x:Boolean x:Key="IsPinned">False</x:Boolean>
                                                                   </scg:Dictionary>
                                                                 </sap:WorkflowViewStateService.ViewState>
@@ -541,7 +541,7 @@
                                                               </Catch>
                                                             </TryCatch.Catches>
                                                           </TryCatch>
-                                                          <If sap:VirtualizedContainerService.HintSize="438,649" sap2010:WorkflowViewState.IdRef="If_2">
+                                                          <If sap:VirtualizedContainerService.HintSize="434,649" sap2010:WorkflowViewState.IdRef="If_2">
                                                             <If.Condition>
                                                               <InArgument x:TypeArguments="x:Boolean">
                                                                 <CSharpValue x:TypeArguments="x:Boolean" sap2010:WorkflowViewState.IdRef="CSharpValue`1_110">text_api == "Service is up &amp; running"</CSharpValue>
@@ -576,6 +576,11 @@
                                                                   </scg:Dictionary>
                                                                 </sap:WorkflowViewStateService.ViewState>
                                                                 <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,145" sap2010:WorkflowViewState.IdRef="LogMessage_24">
+                                                                  <ui:LogMessage.Level>
+                                                                    <InArgument x:TypeArguments="ui:LogLevel">
+                                                                      <CSharpValue x:TypeArguments="ui:LogLevel" sap2010:WorkflowViewState.IdRef="CSharpValue`1_117">UiPath.Core.Activities.LogLevel.Error</CSharpValue>
+                                                                    </InArgument>
+                                                                  </ui:LogMessage.Level>
                                                                   <ui:LogMessage.Message>
                                                                     <InArgument x:TypeArguments="x:Object">
                                                                       <CSharpValue x:TypeArguments="x:Object" sap2010:WorkflowViewState.IdRef="CSharpValue`1_113">api_data_code + " api test is failed"</CSharpValue>
